<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>dk.ku.cpr</groupId>
  <artifactId>OmicsVisualizer</artifactId>
  <version>1.2-beta</version>
  <name>Omics Visualizer</name>
  <packaging>bundle</packaging>
  
  <properties>
  	<bundle.symbolicName>dk.ku.cpr.OmicsVisualizer</bundle.symbolicName>
	<bundle.namespace>dk.ku.cpr.OmicsVisualizer.internal</bundle.namespace>
	
  	<cytoscape.api.version>3.7.0</cytoscape.api.version>
  	
  	<osgi.api.version>6.0.0</osgi.api.version>
	
	<maven-bundle-plugin.version>3.0.0</maven-bundle-plugin.version>
  </properties>
  
  <repositories>
		<repository>
			<id>cytoscape_snapshots</id>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
			<releases>
				<enabled>false</enabled>
			</releases>
			<name>Cytoscape Snapshots</name>
			<url>http://code.cytoscape.org/nexus/content/repositories/snapshots/</url>
		</repository>
		<repository>
			<id>cytoscape_releases</id>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
			<releases>
				<enabled>true</enabled>
			</releases>
			<name>Cytoscape Releases</name>
			<url>http://code.cytoscape.org/nexus/content/repositories/releases/</url>
		</repository>
</repositories>

	<build>
		<plugins>
		      <plugin>
		        <groupId>org.apache.maven.plugins</groupId>
		        <artifactId>maven-compiler-plugin</artifactId>
		        <version>2.0.2</version>
		        <configuration>
		          <!--
		            These options indicate the source code is Java
		            1.7-compliant and the resulting class files
		            should be Java 1.7-compatible.
		          -->
		          <encoding>UTF-8</encoding>
		          <source>1.8</source>
		          <target>1.8</target>
		        </configuration>
		      </plugin>
			<plugin>
				<groupId>org.apache.felix</groupId>
				<artifactId>maven-bundle-plugin</artifactId>
				<version>${maven-bundle-plugin.version}</version>
				<extensions>true</extensions>
				<configuration>
					<instructions>
						<Bundle-SymbolicName>${bundle.symbolicName}</Bundle-SymbolicName>
						<Bundle-Version>${project.version}</Bundle-Version>
						<Export-Package>!${bundle.namespace}.*</Export-Package>
						<Private-Package>${bundle.namespace}.*,${bundle.symbolicName}.external.*</Private-Package>
						<Bundle-Activator>${bundle.namespace}.CyActivator</Bundle-Activator>
						<Embed-Dependency>gson</Embed-Dependency>
						<Embed-Dependency>poi|poi-ooxml|poi-ooxml-schemas|ooxml-schemas;groupId=org.apache.poi;inline=false</Embed-Dependency>
						<Import-Package>junit.*|org.apache.poi.hdgf.*|org.apache.poi.hpbf.*|org.apache.poi.hslf.*|org.apache.poi.hsmf|org.apache.poi.hsmf.*|org.apache.poi.hwpf.*;resolution:=optional,*</Import-Package>
						<DynamicImport-Package>*</DynamicImport-Package>
						<Cytoscape-App-Dependencies>enhancedGraphics;1.4.0</Cytoscape-App-Dependencies>
					</instructions>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<dependencies>
			<!-- Cytoscape API -->
			<dependency>
				<groupId>org.cytoscape</groupId>
				<artifactId>application-api</artifactId>
				<version>${cytoscape.api.version}</version>
			</dependency>
			<dependency>
				<groupId>org.cytoscape</groupId>
				<artifactId>core-task-api</artifactId>
				<version>${cytoscape.api.version}</version>
			</dependency>
			<dependency>
				<groupId>org.cytoscape</groupId>
				<artifactId>equations-api</artifactId>
				<version>${cytoscape.api.version}</version>
			</dependency>
			<dependency>
				<groupId>org.cytoscape</groupId>
				<artifactId>event-api</artifactId>
				<version>${cytoscape.api.version}</version>
			</dependency>
			<dependency>
				<groupId>org.cytoscape</groupId>
				<artifactId>io-api</artifactId>
				<version>${cytoscape.api.version}</version>
			</dependency>
			<dependency>
				<groupId>org.cytoscape</groupId>
				<artifactId>layout-api</artifactId>
				<version>${cytoscape.api.version}</version>
			</dependency>
			<dependency>
				<groupId>org.cytoscape</groupId>
				<artifactId>group-api</artifactId>
				<version>${cytoscape.api.version}</version>
			</dependency>
			<dependency>
				<groupId>org.cytoscape</groupId>
				<artifactId>model-api</artifactId>
				<version>${cytoscape.api.version}</version>
			</dependency>
			<dependency>
				<groupId>org.cytoscape</groupId>
				<artifactId>app-api</artifactId>
				<version>${cytoscape.api.version}</version>
			</dependency>
			<dependency>
				<groupId>org.cytoscape</groupId>
				<artifactId>swing-app-api</artifactId>
				<version>${cytoscape.api.version}</version>
			</dependency>
			<dependency>
				<groupId>org.cytoscape</groupId>
				<artifactId>presentation-api</artifactId>
				<version>${cytoscape.api.version}</version>
			</dependency>
			<dependency>
				<groupId>org.cytoscape</groupId>
				<artifactId>property-api</artifactId>
				<version>${cytoscape.api.version}</version>
			</dependency>
			<dependency>
				<groupId>org.cytoscape</groupId>
				<artifactId>session-api</artifactId>
				<version>${cytoscape.api.version}</version>
			</dependency>
			<dependency>
				<groupId>org.cytoscape</groupId>
				<artifactId>swing-application-api</artifactId>
				<version>${cytoscape.api.version}</version>
			</dependency>
			<dependency>
				<groupId>org.cytoscape</groupId>
				<artifactId>swing-util-api</artifactId>
				<version>${cytoscape.api.version}</version>
			</dependency>
			<dependency>
				<groupId>org.cytoscape</groupId>
				<artifactId>viewmodel-api</artifactId>
				<version>${cytoscape.api.version}</version>
			</dependency>
			<dependency>
				<groupId>org.cytoscape</groupId>
				<artifactId>vizmap-api</artifactId>
				<version>${cytoscape.api.version}</version>
			</dependency>
			<dependency>
				<groupId>org.cytoscape</groupId>
				<artifactId>vizmap-gui-api</artifactId>
				<version>${cytoscape.api.version}</version>
			</dependency>
			<dependency>
				<groupId>org.cytoscape</groupId>
				<artifactId>webservice-api</artifactId>
				<version>${cytoscape.api.version}</version>
			</dependency>
			<dependency>
				<groupId>org.cytoscape</groupId>
				<artifactId>webservice-swing-api</artifactId>
				<version>${cytoscape.api.version}</version>
			</dependency>
			<dependency>
				<groupId>org.cytoscape</groupId>
				<artifactId>work-api</artifactId>
				<version>${cytoscape.api.version}</version>
			</dependency>
			<dependency>
				<groupId>org.cytoscape</groupId>
				<artifactId>work-swing-api</artifactId>
				<version>${cytoscape.api.version}</version>
			</dependency>
			<dependency>
				<groupId>org.cytoscape</groupId>
				<artifactId>datasource-api</artifactId>
				<version>${cytoscape.api.version}</version>
			</dependency>
			<dependency>
				<groupId>org.cytoscape</groupId>
				<artifactId>command-executor-api</artifactId>
				<version>${cytoscape.api.version}</version>
			</dependency>
			<dependency>
				<groupId>org.cytoscape</groupId>
				<artifactId>service-api</artifactId>
				<version>${cytoscape.api.version}</version>
			</dependency>
			<dependency>
				<groupId>org.cytoscape</groupId>
				<artifactId>ci-api</artifactId>
				<version>${cytoscape.api.version}</version>
			</dependency>
			<dependency>
				<groupId>org.cytoscape</groupId>
				<artifactId>util-api</artifactId>
				<version>${cytoscape.api.version}</version>
			</dependency>

		<!-- 3rd party library -->
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.1</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.3</version>
		</dependency>
		<dependency>
			<groupId>org.ops4j.pax.logging</groupId>
			<artifactId>pax-logging-api</artifactId>
			<version>1.5.2</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.osgi</groupId>
			<artifactId>org.osgi.core</artifactId>
			<version>${osgi.api.version}</version>
		</dependency>
	    <dependency>
	    	<groupId>org.slf4j</groupId>
	    	<artifactId>slf4j-simple</artifactId>
	    	<version>1.8.0-beta2</version>
	    </dependency>
	    
	    <!-- Apache poi -->
		<dependency>
			<groupId>org.apache.xmlbeans</groupId> 
			<artifactId>xmlbeans</artifactId> 
			<version>2.4.0</version> 
		</dependency>

		<!-- 
		     org.apache.poi-all (below) consists of the 4 jars listed
			 in this comment. We need to combine them because of a package 
			 split between org.apache.poi and org.apache.poi-ooxml.
        -->
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi</artifactId>
            <version>3.8</version>
        </dependency>
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi-ooxml</artifactId>
            <version>3.8</version>
        </dependency>
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi-ooxml-schemas</artifactId>
            <version>3.8</version>
        </dependency>
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>ooxml-schemas</artifactId>
            <version>1.1</version>
        </dependency>
        
        
        <dependency>
            <groupId>net.sf.opencsv</groupId>
            <artifactId>opencsv</artifactId>
            <version>2.1</version>
        </dependency>
	</dependencies>
</project>